--- a/_posts/2015-08-27-NodeBot.md
+++ b/_posts/2015-08-27-NodeBot.md
@@ -5,4 +5,33 @@ date:   2015-08-27 22:21:41
 categories: jekyll update
 ---
 
---about nodebot--
+A bot built mostly on Javascript. Can it get any cooler ?
+It can, when you see the bot moving wirelessly, taking pictures and [tweeting](https://twitter.com/jsnodebot) them.
+
+![NodeBot 1]({{ site.url }}/assets/images/nodebot/img1.jpg)
+
+##What is NodeBot made of ?
+- Raspberry Pi 
+- Arduino
+- L293D Motor driver
+- Chassis components
+- BLDC Motors
+- 9V Batteries  + Power Bank
+- Breadboard + other minor electrical components
+
+The NodeBot's brain or the primary computing platform is the Raspberry Pi. The entire Node Js code is hosted on the Pi which is connected to the Arduino via a Serial to Usb cable.This Arduino communicates with the Motor Driver which powers the motors. A USB wifi dongle used with the Pi makes the bot run wirelessly.
+The Pi is also connected to the Web Camera which takes all the pictures and tweets them. 
+
+##How is the Arduino programmed ?
+The Arduino code is a simple C code which tells the Arduino to send the signals to the motor driver based on the input received via the serial cable form the Pi. So, let us say that the Pi sends a signal ‘F’, the Arduino is programmed to signal the motor driver to move the bot forward.
+
+[Take me to the code!](https://github.com/MDL-IOT/NodeBotArduino)
+
+##How is the Pi programmed ?
+The Raspberry Pi code is essentially a Node JS / Express code.  The Express server running on the Pi has different routes configured for different actions.
+So let us say, we want to signal the Arduino to move the bot forward, we hit the route http:[raspPi:port]/F . And let jus say we want the bot to take pictures and tweet them, we hit http:[raspPi:port]/Cam. The camera control is achieved via an npm module fswebcam. You can get your bot to do all sorts of cool things.
+
+[Take me to the code!](https://github.com/MDL-IOT/NodeBot-Raspi-Backend)
+
+![NodeBot 2]({{ site.url }}/assets/images/nodebot/img2.jpg)
+ 
