--- a/_posts/2015-08-27-NodeBot.md
+++ b/_posts/2015-08-27-NodeBot.md
@@ -34,4 +34,6 @@ So let us say, we want to signal the Arduino to move the bot forward, we hit the
 [Take me to the code!](https://github.com/MDL-IOT/NodeBot-Raspi-Backend)
 
 ![NodeBot 2]({{ site.url }}/assets/images/nodebot/img2.jpg)
+
+Contributors: Atul R, Abhimanyu Arya, Mayanka Sheoran, Soham Kamani, Mahesh Haldar
  
